[gd_scene load_steps=2 format=3 uid="uid://l1ef27817347"]

[ext_resource type="Script" path="res://scripts/components/interaction/interaction_area_component.gd" id="1_t0u1g"]

[node name="InteractionAreaComponent" type="Area2D"]
collision_layer = 0
collision_mask = 257
script = ExtResource("1_t0u1g")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
